--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-html,body {
+html,
+body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   background-color: #282c34;
   color: white;
   -webkit-font-smoothing: antialiased;
@@ -10,10 +10,8 @@ html,body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
 
 .main-layout {
   display: flex;
@@ -49,5 +47,19 @@ nav li a {
 
 .nav-active {
   color: grey;
-  transition: all .3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+a.link-item {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+  background-color: #2b2b2e;
+  border-radius: 0.25rem;
+  color: aliceblue;
+  font-weight: 600;
+}
+
+a.link-item:hover {
+  background-color: #3a3a3e;
 }
